# ML

./: .env.example  .gitignore  ARCHITECTURE_PIT.md  App.tsx  CRITICAL_FIX_PIT_LEAKAGE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  README_PLATFORM.md  README_WEB.md  TROUBLESHOOTING.md  index.html  metadata.json  package.json  pyproject.toml  railway.toml  requirements.txt  streamlit_railway.toml  types.ts
backend/: config.py  database.py  main.py  models.py
backend/api/: dependencies.py
backend/backtesting/: engine.py
backend/data/: data_manager.py  eodhd_client.py  schemas.py
backend/strategies/: base.py  mean_reversion.py  registry.py
components/: ApiConfig.tsx  BacktestReport.tsx  ConfigEditor.tsx  GeminiChat.tsx  Header.tsx  PipelineRunner.tsx
components/icons/: ChatIcons.tsx
components/ui/: Card.tsx  Toggle.tsx
config/: defaults.yaml  example_nasdaq100.yaml
dashboard/: app.py
dashboard/pages/: 1_📊_Data_Explorer.py  2_⚡_Run_Backtest.py  3_📈_Results.py
hooks/: useMockBacktestData.ts
notebooks/: quickstart.ipynb
pages/: DashboardPage.tsx
scripts/: backtest.py  clean_cache.py  ingest.py  ingest_on_demand.py  init_database.py  report.py  train.py
services/: geminiService.ts
src/: __init__.py  data_loader.py  eodhd_client.py  pit_snapshots.py  pit_store.py
src/backtest/: __init__.py  costs.py  runner.py
src/features/: __init__.py  factors.py  utils.py
tests/: __init__.py  test_backtest_math.py  test_features.py  test_leakage.py  test_on_demand_fetcher.py  test_pit.py  test_pit_leakage_fix.py  test_pit_snapshots.py
(+11 files in other folders)
